--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ idf_component_register(SRCS "main.c"
                             "bluetooth.c"
                             "blufi_security.c"
                           	"wifi.c"
+                            "timers.c"
                     INCLUDE_DIRS "include/")
