--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 idf_component_register(SRCS "main.c"
-                            "bluetooth.c"
-                            "blufi_security.c"
-                          	"wifi.c"
-                            "timers.c"
+							"bluetooth.c"
+							"blufi_security.c"
+							"wifi.c"
+							"timers.c"
+							"gpio_intr.c"
                     INCLUDE_DIRS "include/")
