--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 idf_component_register(SRCS "main.c"
-							"bluetooth.c"
-							"blufi_security.c"
-							"wifi.c"
-							"timers.c"
-							"gpio_intr.c"
+							"srcs/bluetooth.c"
+							"srcs/blufi_security.c"
+							"srcs/wifi.c"
+							"srcs/timers.c"
+							"srcs/gpio_intr.c"
+							"srcs/misc.c"
+							"srcs/tasks.c"
                     INCLUDE_DIRS "include/")
